[build-system]
requires = ["briefcase"]
build-backend = "briefcase"

[project]
name = "Y2MP3"
version = "1.0.0"
description = "تحميل وتحويل الفيديوهات"
author = "ALI ALBEDI"
dependencies = ["yt-dlp", "requests", "kivy~=2.3.0"]

[tool.briefcase.app.Y2MP3]
formal_name = "Y2MP3-Pro"
bundle = "com.drali.y2mp3pro"
description = "تطبيق أندرويد لتحميل وتحويل الفيديوهات"
sources = ["src/Y2MP3"]